# atheme-contrib-modules

./: .deps  .gitattributes  .gitignore  COPYING  INSTALL  Makefile  README.md  atheme-compat.h  backtrace.c  configure  configure.ac  contrib-vendors.h  cs_access_alias.c  cs_aquiet.c  cs_babbler.c  cs_badwords.c  cs_fregister.c  cs_kickdots.c  cs_modesync.c  cs_ping.c  cs_regmode.c  cs_regnotice.c  cs_updown.c  cs_userinfo.c  dnsbl.c  gen_echoserver.c  gen_listenerdemo.c  gen_vhostonreg.c  graphtastical.c  gs_lastfm.c  gs_roulette.c  ircd_announceserv.c  ircd_catserv.c  ircd_loveserv.c  mlocktweaker.c  ms_fsend.c  multimark.c  ns_ajoin.c  ns_cleannick.c  ns_fenforce.c  (+31 more)
.github/workflows/: ci.yml  periodic-coverity-scan.yml
help/default/: ns_goodmail
m4/: atheme-contrib-check-build-requirements.m4  atheme-contrib-libtest-res-query.m4  atheme-contrib-toolchain-tests.m4
src/: .gitignore  Makefile  atheme-compat.h  backtrace.c  contrib-sysconf.h.in  cs_access_alias.c  cs_babbler.c  cs_fregister.c  cs_kickdots.c  cs_regnotice.c  cs_updown.c  cs_userinfo.c  dnsbl.c  gen_listenerdemo.c  gen_vhostonreg.c  gs_roulette.c  ircd_announceserv.c  ircd_loveserv.c  mlocktweaker.c  ns_forbid.c  ns_freezeexpire.c  ns_fregister.c  ns_generatehash.c  ns_generatepass.c  ns_mxcheck.c  ns_mxcheck_async.c  ns_sendpassmail.c  os_akillnicklist.c  os_defcon.c  os_helpme.c  os_joinmon.c  os_joinrate.c  os_kill.c  os_klinechan.c  os_modeall.c  os_procwatch.c  os_resolve.c  os_tabletest.c  os_testcmd.c  os_testproc.c  (+1 more)
